Fix: change profile pic to logo, increase visibility of background patter, turn text in gallery popup white

--- a/src/client/styles/gallery.scss
+++ b/src/client/styles/gallery.scss
@@ -109,7 +109,7 @@
   }
 
   p {
-    color: $color-light-grey;
+    color: #fff;
     grid-area: para;
     font-size: 1rem;
   }
